--- a/public/login.html
+++ b/public/login.html
@@ -40,7 +40,7 @@
     </div>
     <button type="submit" name="signin" class="btn btn-default">SignIn</button>
     </form>
-   <a href="https://webmix.mybluemix.net/">
+   <a href="https://webmix.mybluemix.net/signup">
      <button type="submit" name="signup" class="btn btn-primary">SignUp</button>
    </a>
   </div>
